payment/deployment/istio/payment.gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: cloud-native-go-payment
  namespace: cloud-native-go
spec:
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "payment.cng.me"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cloud-native-go-payment
  namespace: cloud-native-go
spec:
  hosts:
    - "payment.cng.me"
  gateways:
    - cloud-native-go-payment
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: cloud-native-go-payment
            subset: v1
            port:
              number: 80
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: cloud-native-go-payment
  namespace: cloud-native-go
spec:
  host: cloud-native-go-payment
  subsets:
    - name: v1
      labels:
        version: v1
